subprojects/swen430/src/test/resources/tests/valid/Is_Valid_3.while
int f(real|int x) {
    if(x is real) {
        return 0;
    } else {
        return 1;
    }
}

void main() {
    print f(1);
    print f(2.0);
}
