subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_13.while
int f() {
    int x = 1.0;
    return x;
}